# Cdl-react

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  tmp_issue66_safety_check.txt
.agents/: agent-roster.md  agents.md
.agents/skills/: README.md
.codex/agents/: documentation-agent.md  legacy-modernization-agent.md  python-api-agent.md  quality-agent.md  react-modernization-agent.md  ui-style-agent.md
.codex/skills/: documentation-and-changelog.md  feature-specification.md  legacy-application-review.md  parallel-feature-development.md  react-python-fullstack-development.md  release-documentation.md  testing-and-quality-gates.md
.devcontainer/: devcontainer.json
.github/workflows/: app-screenshots.yml  backend-postgres.yml  ci.yml  gcp-deploy-staging.yml  gcp-terraform-staging.yml  github-pages.yml
docs/: milestone-delivery-workflow.md
docs/architecture/: decision-log.md  domain-model-overview.md  production-persistence-adr.md
docs/changelog/: 2026-06-13-squad-runtime-persistence.md  2026-06-13-squad-transfer-persistence.md  2026-06-13-team-selection-persistence.md  2026-07-04-m77-production-persistence.md  2026-07-04-m78-readiness-prep.md  2026-07-05-app-screenshot-artifacts.md  2026-07-05-codespaces-preview.md  2026-07-05-gcp-deployment-foundation.md  2026-07-05-github-pages-static-preview.md
docs/features/: README.md  backend-api-data-platform.md  legacy-migration-feature-index.md  squad-management-scouting-and-transfers.md  team-selection-and-chip-management.md
docs/releases/: README.md  v0.1.0.md
docs/runbooks/: gcp-bootstrap-setup.md  gcp-github-actions-deployment.md  (+7 more)
frontend/: eslint.config.js  index.html  package.json  vite.config.ts
migrations/: env.py  ruff.toml
scripts/: capture-app-screenshots.mjs
tests/: test_app.py  test_auth_api.py  test_auth_persistence_documentation.py  test_auth_service.py  test_backend_database_settings_factory.py  test_checkpoint1_modernisation_api.py  test_checkpoint2_modernisation_api.py  test_checkpoint3_modernisation_api.py  test_checkpoint4_modernisation_api.py  test_checkpoint5_modernisation_api.py  test_codespaces_docs.py  test_contracts.py  test_core_league_fpl_schema.py  test_dashboard_api.py  test_dashboard_fdr_persistence_schema.py  test_dashboard_service.py  test_fdr_api.py  test_fdr_service.py  test_gcp_deployment_foundation.py  test_github_app_screenshots_docs.py  test_github_pages_preview.py  test_import_persistence_schema.py  test_league_api.py  test_league_fixture_persistence_schema.py  test_league_service.py  test_legacy_migration_index.py  test_local_ci_postgresql_foundation.py  test_m78_readiness_docs.py  test_parallel_development_coordination.py  test_postgres_identity_repositories.py  test_postgres_squad_api.py  test_postgres_team_selection_api.py  test_preferences.py  test_production_backend_database_and_gcp_infrastructure.py  test_production_persistence_adr.py  test_rules_api.py  test_rules_contracts.py  test_squad_api.py  test_squad_persistence_schema.py  test_squad_repository_factory.py  (+5 more)
(+215 files in other folders)
