[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cdl-react-api"
version = "0.1.0"
description = "Castle Draft League modern Python API foundation."
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = [
    "src/cdl_api/repositories/squad.py",
    "src/cdl_api/routers/modernisation.py",
    "src/cdl_api/routers/modernisation_competition_experience.py",
    "src/cdl_api/routers/modernisation_history.py",
    "src/cdl_api/routers/modernisation_squad_movement.py",
    "src/cdl_api/routers/modernisation_weekly.py",
    "tests/test_checkpoint1_modernisation_api.py",
    "tests/test_checkpoint2_modernisation_api.py",
    "tests/test_checkpoint3_modernisation_api.py",
    "tests/test_checkpoint4_modernisation_api.py",
    "tests/test_checkpoint5_modernisation_api.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "S"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"src/cdl_api/repositories/squad.py" = ["E501"]
"src/cdl_api/routers/modernisation.py" = ["ANN401", "E501", "S324"]
"src/cdl_api/routers/modernisation_competition_experience.py" = ["ANN401", "E501", "S324"]
"src/cdl_api/routers/modernisation_history.py" = ["ANN401", "E501", "S324"]
"src/cdl_api/routers/modernisation_squad_movement.py" = ["ANN401", "E501", "S324"]
"src/cdl_api/routers/modernisation_weekly.py" = ["ANN401", "E501", "S324"]
"src/cdl_api/routers/*.py" = ["B008"]
"src/cdl_api/settings.py" = ["S105"]
"tests/test_checkpoint1_modernisation_api.py" = ["E501"]
"tests/test_checkpoint2_modernisation_api.py" = ["E501"]
"tests/test_checkpoint3_modernisation_api.py" = ["E501"]
"tests/test_checkpoint4_modernisation_api.py" = ["E501"]
"tests/test_checkpoint5_modernisation_api.py" = ["E501"]
"tests/**/*.py" = ["S101", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
